# CVRefine

./: CMakeLists.txt  README.md  main.cpp
core/: Application.cpp  Application.h  Common.cpp  Common.h  CommonDef.cpp  CommonDef.h
